# codex

./: .dockerignore  .gitignore  CUSTOM_TOOLS_PLAN.md  PENDING_TOOL_WAIT_PLAN.md  README.md  README_extensive.md  SESSION_VIEWER_PLAN.md  chrome_devtools_actions.jsonl  chrome_devtools_hook.py  orchestrator-profile.toml  tool_hook_logger.py
.codex/: orchestrator-profile.toml
codex-cli/: Dockerfile
codex-cli/scripts/: pitchai_codex_config.toml  pitchai_elise_config.toml  pitchai_elise_graph_tool.py  pitchai_elise_prompt.md  pitchai_run_codex_job.py  pitchai_run_elise_job.py  pitchai_run_sharepoint_inbox_job.sh  pitchai_sharepoint_inbox_prompt.md  pitchai_sharepoint_requirements.txt  pitchai_sharepoint_tool.py
codex-rs/common/: Cargo.toml
codex-rs/exec/: Cargo.toml
docs/: config.md  example-config.md  morning_codex_runner.md  pitchai_elise_agent.md  pitchai_elise_telegram_dispatch.md  pitchai_generic_codex_job.md  pitchai_host_dispatcher.md  pitchai_upstream_sync.md  profiles.md  web-agent-aipc.toml  web-agent-config.md  web-agent.toml
docs/prompt_sequences/: two_step_demo.toml
scripts/: run_codex_prompt.sh
scripts/launchd/: com.pitchai.codex.morning.plist
scripts/prompts/: morning_healthcheck_prompt.txt
tools/session_viewer/: README.md  pyproject.toml
tools/session_viewer/session_viewer/: __init__.py  app.py  config.py  models.py  parser.py  search.py  summary.py
tools/session_viewer/static/: styles.css
tools/session_viewer/static/lucide/: lucide.css
tools/session_viewer/templates/: base.html  conversation.html  index.html
(+85 files in other folders)
