[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-session-viewer"
version = "0.1.0"
description = "FastAPI server for browsing Codex conversation rollouts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "pydantic>=2.8",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["ruff>=0.6", "black>=24.0"]

[tool.setuptools.packages.find]
where = ["session_viewer"]
